--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover"/>
-  <title>INVENTARIOS ANUALES PROVEEDORA</title>
+  <title>INVENTARIOS ANUALES PROVEEDORA BODEGA41</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <script src="https://unpkg.com/html5-qrcode"></script>
@@ -166,7 +166,7 @@
   <div class="wm-logo"><img src="logo_proveedora.webp" alt=""></div>
 
   <main id="appRoot">
-    <h1 class="page-title">INVENTARIOS ANUALES<br/>PROVEEDORA</h1>
+    <h1 class="page-title">INVENTARIOS ANUALES B41<br/>PROVEEDORA</h1>
 
     <!-- ===== Pantalla 1: Configuración ===== -->
     <section id="view-setup" class="view active">
